--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
       <meta charset="utf-8">
 
-      <title>Transparent Login Form HTML CSS</title>
+      <title>Model Hss</title>
 
       <link rel="stylesheet" href="style.css">
 
